<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/contentActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adBanner">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/text_shortcut_created"/>
        </com.google.android.material.appbar.AppBarLayout>
        <RelativeLayout
            android:id="@+id/contentAccess"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbar">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/menuAccess"
                android:paddingTop="10dp"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#4d4d4d"
                android:ellipsize="end"
                android:id="@+id/textListEmpty"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_list_empty"
                android:maxLines="1"
                android:lines="1"
                android:minLines="1"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:drawableTopCompat="@drawable/ic_baseline_launch_24_big"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonAddAccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:src="@drawable/ic_baseline_add_24"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/app_name"
                android:layout_alignParentEnd="true"
                app:backgroundTint="@color/white"
                app:elevation="2dp"/>
        </RelativeLayout>
        <LinearLayout
            android:gravity="top|center_horizontal"
            android:orientation="vertical"
            android:id="@+id/contentEditAccess"
            android:paddingTop="30dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbar">
            <FrameLayout
                android:id="@+id/selectImage"
                android:background="@drawable/background_image_shortcut"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="30dp">
                <ImageView
                    android:layout_gravity="end|top"
                    android:id="@+id/editImage"
                    android:background="@drawable/background_edit_shortcut"
                    android:padding="4dp"
                    android:visibility="gone"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_baseline_edit_24"
                    android:contentDescription="@string/app_name"
                    android:layout_marginEnd="12dp"/>
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/imageSelected"
                    android:layout_width="82dp"
                    android:layout_height="82dp"
                    android:contentDescription="@string/text_shortcuts"/>
            </FrameLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_name"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:gravity="end|center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_cancel"
                    android:textAllCaps="false"
                    android:layout_marginEnd="15dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/acceptButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_accept"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <ProgressBar
        android:layout_gravity="center"
        android:id="@+id/progressAccess"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        app:adSize="BANNER"
        app:adUnitId="@string/ad_banner_uid"/>
</RelativeLayout>
